# os-vif-plugin-vhostuser-fp

./: .coveragerc  .gitreview  MANIFEST.in  Makefile  README.rst  openstack-common.conf  requirements.txt  rpm_deps.txt  setup.cfg  setup.py  tox.ini
devstack/: README.rst  plugin.sh
os_vif_plugin_vhostuser_fp/: exception.py  fp_plugin.py
scripts/: get_vcpu_pin_set.py
vif_plug_vhostuser/: linux_net.py  processutils.py  vhostuser.py
vif_plug_vhostuser_fp/: common.py  privsep.py  vhostuser_fp.py
vif_plug_vhostuser_fp/plug_lb/: linux_net.py  linuxbridge.py
vif_plug_vhostuser_fp/plug_ovs/: linux_net.py  ovs.py
vif_plug_vhostuser_fp_bridged/: common.py  privsep.py  vhostuser_fp_bridged.py
vif_plug_vhostuser_fp_bridged/plug_lb/: linux_net.py  linuxbridge.py
vif_plug_vhostuser_fp_bridged/plug_ovs/: linux_net.py  ovs.py
