[metadata]
name = os-vif-plugin-vhostuser-fp
summary = An os-vif plugin to plug/unplug fastpath vhostuser ports
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    os_vif_plugin_vhostuser_fp
    vif_plug_vhostuser_fp

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = os-vif-plugin-vhostuser-fp/locale
domain = os-vif-plugin-vhostuser-fp

[update_catalog]
domain = os_vif
output_dir = os-vif-plugin-vhostuser-fp/locale
input_file = os-vif-plugin-vhostuser-fp/locale/os-vif-plugin-vhostuser-fp.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = os-vif-plugin-vhostuser-fp/locale/os-vif-plugin-vhostuser-fp.pot

[entry_points]
os_vif =
    vhostuser_fp = vif_plug_vhostuser_fp.vhostuser_fp:VhostuserFpPlugin
